REPL: Python Console
Python 2.7.6 (default, Sep  9 2014, 15:04:36)
[GCC 4.2.1 Compatible Apple LLVM 6.0 (clang-600.0.39)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 2*2
4
>>> 3!
  File "<stdin>", line 1
    3!
     ^
SyntaxError: invalid syntax
>>> !3
  File "<stdin>", line 1
    !3
    ^
SyntaxError: invalid syntax
>>> print 2*2
4
>>> import string
>>> 5*6
30
>>> 
